--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aprendiendo a crear REST api",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node index.js",
     "dev": "nodemon ./index.js",
     "test": ""
   },
